--- a/FitnessCenterAspNetMVCApp/Web.config
+++ b/FitnessCenterAspNetMVCApp/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FitnessCenterAspNetMVCApp-20161201123444.mdf;Initial Catalog=aspnet-FitnessCenterAspNetMVCApp-20161201123444;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DB_FitnessCenterWebEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TANYA-PC;initial catalog=DB_FitnessCenterWeb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB_FitnessCenterWebEntities" connectionString="Data Source=TANYA-PC;Initial Catalog=DB_FitnessCenterWeb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
