Index view has been divided: some information about Feedback has been carried to Feedback view; some information about Service has been carried to Service view. But references to that views haven`t been added.

--- a/FitnessCenterAspNetMVCApp/FitnessCenterAspNetMVCApp.csproj
+++ b/FitnessCenterAspNetMVCApp/FitnessCenterAspNetMVCApp.csproj
@@ -229,6 +229,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Controls\search2_.png" />
     <Content Include="Images\Social\fb.png" />
     <Content Include="Images\Social\go.png" />
     <Content Include="Images\Social\insta.png" />
