--- a/FitnessCenterAspNetMVCApp/bin/FitnessCenterAspNetMVCApp.dll.config
+++ b/FitnessCenterAspNetMVCApp/bin/FitnessCenterAspNetMVCApp.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FitnessCenterAspNetMVCApp-20161206013820.mdf;Initial Catalog=aspnet-FitnessCenterAspNetMVCApp-20161206013820;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DbModel" connectionString="Data Source=TANYA-PC;Initial Catalog=DB_FitnessCenterWeb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
