--- a/FitnessCenterAspNetMVCApp/FitnessCenterAspNetMVCApp.csproj
+++ b/FitnessCenterAspNetMVCApp/FitnessCenterAspNetMVCApp.csproj
@@ -226,6 +226,26 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Content\Articles\article.jpg" />
+    <Content Include="Images\Content\Articles\images %281%29.jpg" />
+    <Content Include="Images\Content\Articles\images %282%29.jpg" />
+    <Content Include="Images\Content\Articles\images %283%29.jpg" />
+    <Content Include="Images\Content\Articles\nabrat-miwsu-min.jpg" />
+    <Content Include="Images\Content\Articles\спортпит.jpg" />
+    <Content Include="Images\Content\Coaches\mens.png" />
+    <Content Include="Images\Content\Coaches\mw.png" />
+    <Content Include="Images\Content\Coaches\personal-trainer.png" />
+    <Content Include="Images\Content\Services\aerobic.jpg" />
+    <Content Include="Images\Content\Services\boxing.jpg" />
+    <Content Include="Images\Content\Services\crossfit.jpg" />
+    <Content Include="Images\Content\Services\gym.jpg" />
+    <Content Include="Images\Content\Services\pilates.jpg" />
+    <Content Include="Images\Content\Services\shaping.jpg" />
+    <Content Include="Images\Content\Services\swimming.jpg" />
+    <Content Include="Images\Content\Services\tennis.jpg" />
+    <Content Include="Images\Content\Services\wrestling.jpg" />
+    <Content Include="Images\Content\thumb2-sport-futnes-gantelu-chernyu-fon.jpg" />
+    <Content Include="Images\Content\tmb_173175_7238_cut.jpg" />
     <Content Include="Images\Controls\search2_.png" />
     <Content Include="Images\Social\fb.png" />
     <Content Include="Images\Social\go.png" />
@@ -289,7 +309,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\Content\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
