--- a/FitnessCenterAspNetMVCApp/FitnessCenterAspNetMVCApp.csproj
+++ b/FitnessCenterAspNetMVCApp/FitnessCenterAspNetMVCApp.csproj
@@ -194,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CoachController.cs" />
+    <Compile Include="Controllers\FeedbackController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
     <Compile Include="Models\Abonement.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -310,6 +311,8 @@
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Views\Service\ServiceView.cshtml" />
     <Content Include="Views\Coach\CoachView.cshtml" />
+    <Content Include="Views\Feedback\AddFeedback.cshtml" />
+    <Content Include="Views\Feedback\ShowFeedback.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
